problem-statement-1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service # A unique name for the service
spec:
  type: NodePort # Exposes the service on each Node's IP at a static port. Easiest for Minikube.
  selector:
    app: wisecow # This must match the 'app' label in Deployment's pods
  ports:
    - protocol: TCP
      port: 80 # The port the service will be available on inside the cluster
      targetPort: 4499 # The port to forward traffic to on the container
